@@ -64,7 +64,8 @@ if (!browser.msie || parseFloat(browser.version) > 8) {
       t.deepEqual(
         requestURL.query, {
           'x-algolia-api-key': 'jquery-success-apiKey',
-          'x-algolia-application-id': 'jquery-success-applicationID'
+          'x-algolia-application-id': 'jquery-success-applicationID',
+          'x-user-agent': global.$.algolia.ua
         },
         'requestURL query matches'
       );
