@@ -3,6 +3,8 @@ module.exports = computeExpectedRequest;
 var merge = require('lodash-compat/object/merge');
 var format = require('util').format;
 
+var algoliasearch = require('../../');
+
 function computeExpectedRequest(expectedRequest, credentials) {
   expectedRequest.URL = merge(
     getRequestURL(credentials),
@@ -36,6 +38,7 @@ function computeExpectedRequest(expectedRequest, credentials) {
   if (!process.browser) {
     expectedRequest.headers['x-algolia-api-key'] = credentials.searchOnlyAPIKey;
     expectedRequest.headers['x-algolia-application-id'] = credentials.applicationID;
+    expectedRequest.headers['x-user-agent'] = algoliasearch.ua;
   }
 
   return expectedRequest;
@@ -47,7 +50,8 @@ function getRequestURL(credentials) {
   if (process.browser) {
     expectedQueryString = {
       'x-algolia-api-key': credentials.searchOnlyAPIKey,
-      'x-algolia-application-id': credentials.applicationID
+      'x-algolia-application-id': credentials.applicationID,
+      'x-user-agent': algoliasearch.ua
     };
   } else {
     // serverside will send them in headers
